# kflow

./: Cargo.toml  Dockerfile.daemon  Makefile  README.md
.github/workflows/: build-multiarch-image.yml  release-krew.yml  release.yml
k8s/: daemonset.yaml
scripts/: generate-krew-manifest.sh
src/cli/: kubectl.rs  mod.rs
