[package]
name = "kflow"
version = "0.1.0"
edition = "2024"
description = "Node-local daemon and TUI that reads kernel conntrack and visualizes per-node network connections."
authors = ["AlexsJones"]
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/AlexsJones/kflow"
readme = "README.md"
homepage = "https://github.com/AlexsJones/kflow"
keywords = ["conntrack", "kubernetes", "network", "monitoring"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
tokio = { version="1.48.0", features=["full"]}
color-eyre = "0.6.3"
crossterm = "0.28.1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hostname = "0.4"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "system-config"] }

[[bin]]
name = "kflow"
path = "src/bin/cli.rs"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"
